--- a/ProjectNocturne/assets/translations/en-us.json
+++ b/ProjectNocturne/assets/translations/en-us.json
@@ -60,6 +60,7 @@
     "feedback_error_server": "Server error, please try again later.",
     "feedback_error_sending": "Error sending feedback, please try again later.",
     "section_deleted": "Section '{name}' has been deleted.",
+     "section_updated_success": "Section '{name}' has been updated successfully.",
     "duplicate_section_name": "A section with the name '{name}' already exists."
   },
   "color_system": {
