--- a/ProjectNocturne/assets/translations/es-mx.json
+++ b/ProjectNocturne/assets/translations/es-mx.json
@@ -348,7 +348,7 @@
     "march": "marzo",
     "april": "abril",
     "may": "mayo",
-    "june": "juin",
+    "june": "junio",
     "july": "julio",
     "august": "agosto",
     "september": "septiembre",
